ci: add beta-ds publish script and cci config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -658,6 +658,7 @@ releasable_branches: &releasable_branches
       - ui-components/main
       - 1.0-stable
       - native
+      - beta-ds
 
 test_browsers: &test_browsers
   browser: [chrome, firefox]
